--- a/css/theme.css
+++ b/css/theme.css
@@ -443,8 +443,8 @@ img.float-right {
 	margin-left: 30px;
 }
 
-img.float-right1 {
-	float: right;
+content.float-left {
+	float: left;
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
