--- a/css/theme.css
+++ b/css/theme.css
@@ -443,10 +443,18 @@ img.float-right {
 	margin-left: 30px;
 }
 
+img.float-right1 {
+	float: right;
+	margin-top: 9px;
+	margin-right: 0px;
+	margin-bottom: 12px;
+	margin-left: 100px;
+}
+
 content.float-left {
 	float: left;
 	margin-top: 0px;
-	margin-right: 0px;
+	margin-right: 400px;
 	margin-bottom: 0px;
 	margin-left: 0px;
 }
